# streaming-app

./: CMakeLists.txt  README.md  vcpkg.json
frontend/: next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/app/: page.tsx
frontend/src/app/movie-details/: page.tsx
frontend/src/components/page/: MoviesPage.tsx
frontend/src/interfaces/native/: NativeAPI.ts  Nativebridge.ts
frontend/src/lib/: ipc.ts
frontend/types/: global.d.ts
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/app/ui/: main_window.cpp  main_window.hpp  webview_host.cpp  webview_host.hpp  window_base.cpp  window_base.hpp  window_manager.hpp
src/core/: CMakeLists.txt
src/core/config/: config_manager.cpp  config_manager.hpp
src/core/error/: error_handler.hpp
src/core/events/: event_system.hpp
src/core/ipc/: ipc_manager.cpp  ipc_manager.hpp  ipc_types.hpp
src/core/logging/: structured_logger.hpp
src/core/utils/: http_client.hpp  logger.cpp  logger.hpp  lru_cache.hpp  rating_normalizer.cpp  result.hpp  win32_utils.cpp  win32_utils.hpp
src/domain/: CMakeLists.txt
src/domain/models/: media_types.hpp  movie.hpp
src/modules/api/: movie_handler.cpp
src/modules/data/: data_manager.cpp  data_manager.hpp
src/modules/data/models/: movie.hpp
src/services/: CMakeLists.txt  service_interface.hpp
src/services/auth/: auth_manager.hpp
src/services/cache/: cache_manager.cpp  cache_manager.hpp
src/services/media/: IMediaProvider.hpp  media_service.cpp  media_service.hpp  mock_media_provider.cpp
src/services/providers/: GenericProvider.cpp  GenericProvider.hpp  omdbMediaProvider.cpp  omdbMediaProvider.hpp  provider_repository.cpp  provider_repository.hpp  providers.json  tmdb_provider.cpp  tmdb_provider.hpp
src/services/providers/utils/: rating_normalizer.hpp
